--- a/note-by-gty/第一章.md
+++ b/note-by-gty/第一章.md
@@ -12,8 +12,8 @@
 
 **函数体**：定义了函数所执行动作的语句块。
 
-**头文件**：使类或其他名字的定义可被多个程序使用的一种++机制++。
+**头文件**：使类或其他名字的定义可被多个程序使用的一种`机制`。
 
-**初始化(initialize)**：在一个对象创建的时候赋予它一个值。函数内部的++内置类型++变量默认是不初始化的，使用为初始化变量是错误的。
+**初始化(initialize)**：在一个对象创建的时候赋予它一个值。函数内部的`内置类型`变量默认是不初始化的，使用为初始化变量是错误的。
 
 **成员函数**：类定义的操作。
